# cvg_quadrotor_swarm

./: .gitignore  .gitmodules  LICENSE  README.md
arucoEye/: CMakeLists.txt  manifest.xml
arucoEye/config/: arUcoConfigWorld.xml  arUcoConfigWorld2.xml  arUcoList.xml  camera.yml
arucoEye/src/include/: arucoEye.h
arucoEye/src/source/: arucoEye.cpp  arucoEye_test.cpp
cvgDroneControlStack/droneTrajectoryControllerROSModule/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
cvgDroneControlStack/droneTrajectoryControllerROSModule/launch/: droneTrajectoryControllerROSModule.launch
cvgDroneControlStack/droneTrajectoryControllerROSModule/src/include/: droneTrajectoryControllerROSModule.h  droneTrajectoryControllerROSModule.h.orig
cvgDroneControlStack/droneTrajectoryControllerROSModule/src/source/: droneTrajectoryControllerROSModule.cpp  droneTrajectoryControllerROSModule.cpp.orig  droneTrajectoryControllerROSModuleNode.cpp
cvgDroneControlStack/droneTrajectoryStateMachine/: CMakeLists.txt  mainpage.dox  manifest.xml
cvgDroneControlStack/droneTrajectoryStateMachine/src/include/: Controller_SM_Trajectory_v2.h  Controller_SM_stateNames.h  Controller_StateMachine_v2.h
cvgDroneControlStack/droneTrajectoryStateMachine/src/include/config/: config_controller_Parrot.h  config_controller_Pelican.h
cvgDroneControlStack/droneTrajectoryStateMachine/src/source/: Controller_SM_Trajectory_v2.cpp  Controller_StateMachine_v2.cpp
documentation/: .gitignore
driverParrotARDroneROSModule/: CMakeLists.txt  manifest.xml
droneArchitectureRvizInterfaceROSModule/: .gitignore  CMakeLists.txt  manifest.xml
droneArchitectureRvizInterfaceROSModule/launch/: droneArchitectureRvizInterfaceROSModule.launch  rviz_config.rviz
droneArchitectureRvizInterfaceROSModule/src/include/: RvizInteractiveMarkerDisplay.h  RvizInterfaceROSModule.h  swarmAgentInterface.h
droneArchitectureRvizInterfaceROSModule/src/source/: RvizInteractiveMarkerDisplay.cpp  RvizInterfaceROSModule.cpp  RvizInterfaceROSModuleNode.cpp  swarmAgentInterface.cpp
droneArucoEye/: CMakeLists.txt  README  manifest.xml
droneArucoEye/src/include/: droneArucoEye.h
droneArucoEye/src/source/: droneArucoEye.cpp
droneArucoEyeROSModule/: CMakeLists.txt  README  manifest.xml
droneArucoEyeROSModule/launch/: droneArucoEyeROSModule.launch
droneArucoEyeROSModule/src/include/: droneArucoEyeROSModule.h
droneArucoEyeROSModule/src/source/: droneArucoEyeROSModule.cpp  droneArucoEyeROSModuleNode.cpp
droneBrainROSModule/: CMakeLists.txt  mainpage.dox  manifest.xml
droneEKFStateEstimator/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
droneEKFStateEstimatorROSModule/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
droneEKFStateEstimatorROSModule/launch/: droneEKFStateEstimatorROSModule.launch
droneEKFStateEstimatorROSModule/src/include/: droneEKFStateEstimatorROSModule.h
droneEKFStateEstimatorROSModule/src/source/: droneEKFStateEstimatorROSModule.cpp  droneEKFStateEstimatorROSModuleNode.cpp
droneInterfaceROSModule/: CMakeLists.txt  manifest.xml
droneInterfaceROSModule/launch/: droneInterfaceROSModule.launch  droneInterface_jp_ROSModule.launch
droneInterfaceROSModule/other/: keybindings_interfacejp_tentative.txt
droneInterfaceROSModule/src/includes/: droneInterfaceROSModule.h
droneInterfaceROSModule/src/sources/: droneInterfaceROSModule.cpp  droneInterfaceROSModuleNode.cpp  droneInterface_jp_ROSModuleNode.cpp
droneLoggerROSModule/: CMakeLists.txt  manifest.xml
droneLoggerROSModule/launch/: droneLoggerROSModule.launch
droneLoggerROSModule/src/include/: droneloggerrosmodule.h
droneLoggerROSModule/src/source/: droneloggerrosmodule.cpp
droneMissionPlanner/: CMakeLists.txt  README  manifest.xml
droneMissionPlannerROSModule/: CMakeLists.txt  README  manifest.xml
droneModuleInterfaceROS/: CMakeLists.txt  manifest.xml
droneModuleROS/: CMakeLists.txt  README  manifest.xml
droneMsgsROS/: CMakeLists.txt  README  manifest.xml
droneMsgsROS/msg/: droneCommand.msg  droneStatus.msg  droneTrajectoryControllerControlMode.msg
droneMsgsROS/src/include/: communication_definition.h  nodes_definition.h
droneObstacleProcessorVisualMarks/: CMakeLists.txt  README  manifest.xml
droneObstacleProcessorVisualMarksROSModule/: CMakeLists.txt  README  manifest.xml
droneSimulator/: .gitignore  CMakeLists.txt  manifest.xml
droneSimulator/src/include/: droneElements.h  droneSimulator.h  quadrotor_model.h
droneSimulator/src/source/: droneElements.cpp  droneSimulator.cpp  quadrotor_model.cpp
droneSimulatorROSModule/: CMakeLists.txt  manifest.xml
droneTrajectoryPlanner/: CMakeLists.txt  (+2 more)
lib_aruco/: CMakeLists.txt  README  manifest.xml
lib_aruco/src/source/: marker.cpp  markerdetector.cpp
lib_cvgekf/: CMakeLists.txt  mainpage.dox  manifest.xml
lib_cvgekf/src/include/: extendedKalmanFilter.h  model.h
lib_cvgekf/src/source/: extendedKalmanFilter.cpp  model.cpp
lib_cvglogger/: CMakeLists.txt  manifest.xml
lib_cvglogger/src/include/: dronelogfileswritter.h
lib_cvglogger/src/source/: code_tests.cpp  debugstringstacker.cpp  dronelogfileswritter.cpp
lib_cvgloggerROS/: CMakeLists.txt  manifest.xml
lib_cvgloggerROS/src/include/: droneloggerrostopicsubscriber.h
lib_cvgloggerROS/src/source/: code_tests.cpp  droneloggerrosbasicmodule.cpp  droneloggerrospublisher.cpp
lib_cvgutils/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
lib_cvgutils/src/include/: Timer.h  cvg_utils_library.h  matrixLib.h  pruebastaticbool.h  xmlfilereader.h
lib_cvgutils/src/include/control/: Controller_MidLevel_controlModes.h  FilteredDerivative.h  LowPassFilter.h  MidLevelControlledsimMultirotor.h  PID.h  simpletrajectorywaypoint.h
lib_cvgutils/src/include/drone_utils/: drone_state_command_enum.h  drone_state_enum.h
lib_cvgutils/src/source/: code_tests.cpp  code_tests2.cpp  cvg_utils_library.cpp  matrixLib.cpp  pruebastaticbool.cpp  simpletrajectorywaypoint.cpp  xmlfilereader.cpp
lib_cvgutils/src/source/control/: FilteredDerivative.cpp  LowPassFilter.cpp  MidLevelControlledsimMultirotor.cpp  PID.cpp
(+192 files in other folders)
